# ember

./: .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .ignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  WHITEPAPER.md  clippy.toml  deny.toml  lefthook.yml  opencode.json  rustfmt.toml  skills-lock.json
.cargo/: audit.toml
.claude/: settings.json
.claude/hooks/: post-edit-fmt.sh  stop-lint.sh
.claude/skills/: rust-async-patterns  rust-best-practices
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: audit.yml  check.yml  codeql.yml  fuzz.yml  lint-actions.yaml  lint.yml  test.yml
apps/client/: AGENTS.md  Cargo.toml  config.example.toml
apps/client/src/: config.rs  export.rs  identity.rs  import.rs  main.rs  send.rs
apps/client/src/discovery/: controller.rs  mod.rs
apps/client/src/tui/: app.rs  conversation_list.rs  event.rs  http_server.rs  mod.rs  password.rs  ui.rs
apps/client/src/tui/commands/: builtin.rs  complete.rs  mod.rs  parser.rs  popup.rs
apps/node/: AGENTS.md  Cargo.toml  config.example.toml
apps/node/src/: api.rs  cleanup.rs  config.rs  export.rs  import.rs  lib.rs  main.rs  mqtt_bridge.rs  node_identity.rs  persistent_store.rs  rate_limit.rs  replication.rs  signed_headers.rs  store.rs
apps/node/tests/: fetch_pagination.rs  identity_endpoint.rs  receipt_on_submit.rs  signed_replication.rs
crates/ember-bundle/: Cargo.toml
crates/ember-bundle/src/: body.rs  error.rs  lib.rs  reader.rs  writer.rs
crates/ember-config/: Cargo.toml
crates/ember-config/src/: http.rs  lib.rs  mqtt.rs  security.rs  tier.rs  validation.rs
crates/ember-contact/: Cargo.toml
crates/ember-contact/src/: lib.rs
crates/ember-core/: Cargo.toml
crates/ember-core/src/: lib.rs
crates/ember-core/tests/: integration.rs  sneakernet.rs
crates/ember-discovery/: Cargo.toml
crates/ember-discovery/src/: backend.rs  mdns_sd.rs  txt.rs  types.rs
crates/ember-encryption/: Cargo.toml
crates/ember-encryption/src/: lib.rs
crates/ember-identity/: Cargo.toml
crates/ember-identity/src/: encrypted.rs  lib.rs
crates/ember-message/: Cargo.toml
crates/ember-message/src/: lib.rs  tombstone.rs
crates/ember-message/tests/: golden_wire_format.rs
crates/ember-node-core/: Cargo.toml
crates/ember-node-core/src/: embedded.rs  lib.rs  mailbox_store.rs  request.rs  time.rs
crates/ember-outbox/: Cargo.toml
crates/ember-outbox/src/: lib.rs  state.rs  store.rs
crates/ember-storage/: Cargo.toml
crates/ember-storage/src/: lib.rs
crates/ember-transport/: Cargo.toml
crates/ember-transport/src/: composite.rs  coordinator.rs  dedup.rs  delivery.rs  embedded_target.rs  http.rs  http_pagination.rs  http_target.rs  lib.rs  mqtt.rs  mqtt_receiver.rs  mqtt_target.rs  pool.rs  registry.rs  seen_cache.rs  target.rs  tls.rs  url_auth.rs
crates/ember-transport/tests/: http_auth_test.rs
crates/reme-bundle/: Cargo.toml
crates/reme-bundle/src/: body.rs  error.rs  lib.rs  reader.rs  writer.rs
crates/reme-config/: Cargo.toml
crates/reme-config/src/: http.rs  lib.rs  mqtt.rs  peer.rs  security.rs  validation.rs
crates/reme-contact/: Cargo.toml
crates/reme-contact/src/: lib.rs
crates/reme-core/: Cargo.toml
crates/reme-core/src/: embedded.rs  lib.rs
crates/reme-core/tests/: integration.rs  sneakernet.rs
crates/reme-discovery/: Cargo.toml
crates/reme-discovery/src/: backend.rs  fake.rs  lib.rs  mdns_sd.rs  txt.rs  types.rs
crates/reme-encryption/: Cargo.toml
crates/reme-encryption/src/: lib.rs
crates/reme-identity/: Cargo.toml
crates/reme-identity/src/: encrypted.rs  lib.rs
crates/reme-message/: Cargo.toml
crates/reme-message/src/: dag.rs  lib.rs  tombstone.rs  wire.rs
crates/reme-message/tests/: golden_wire_format.rs
crates/reme-node-core/: Cargo.toml
crates/reme-node-core/src/: channel.rs  embedded.rs  error.rs  http.rs  lib.rs  mailbox_store.rs  node.rs  replication.rs  request.rs  storage.rs  time.rs
crates/reme-outbox/: Cargo.toml
crates/reme-outbox/src/: config.rs  lib.rs  state.rs  store.rs
crates/reme-prekeys/: Cargo.toml
crates/reme-prekeys/src/: lib.rs
crates/reme-session/: Cargo.toml
crates/reme-session/src/: lib.rs
crates/reme-storage/: Cargo.toml
crates/reme-storage/src/: lib.rs  mailbox.rs  unified.rs
crates/reme-transport/: Cargo.toml
crates/reme-transport/src/: channel.rs  composite.rs  coordinator.rs  dedup.rs  delivery.rs  embedded_target.rs  http.rs  http_pagination.rs  http_target.rs  lib.rs  mqtt.rs  mqtt_receiver.rs  mqtt_target.rs  pool.rs  query.rs  receiver.rs  registry.rs  seen_cache.rs  target.rs  tls.rs  url_auth.rs
crates/reme-transport/tests/: http_auth_test.rs
docs/: lan-discovery.md  merkle-dag.md  messenger-traffic-analysis.md  native-desktop-stack-research.md  research-group-chat-integration.md  research-group-chat.md  threat-model.md  tiered-delivery.md
docs/drafts/: session-encryption.md
docs/research/: group-chat-integration.md
docs/superpowers/plans/: 2026-03-26-quarantine-corrupt-mailbox-rows.md  2026-03-27-action-based-tui-event-loop.md
docs/superpowers/specs/: 2026-03-26-quarantine-corrupt-mailbox-rows.md  2026-03-27-action-based-tui-event-loop.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_bundle_reader.rs  fuzz_inner_envelope.rs  fuzz_outer_envelope.rs  fuzz_tombstone.rs  fuzz_wire_payload.rs
spec/research/: routing-key-security-analysis.md
