[workspace]
resolver = "3"
members = [
    "crates/*",
    "apps/*",
]

[workspace.dependencies]
reme-identity = { path = "crates/reme-identity" }
reme-message = { path = "crates/reme-message" }
reme-encryption = { path = "crates/reme-encryption" }
reme-transport = { path = "crates/reme-transport" }
reme-storage = { path = "crates/reme-storage" }
reme-core = { path = "crates/reme-core" }
reme-node = { path = "crates/reme-node" }

anyhow = "^1.0.99"
thiserror = "^2.0.16"
tracing = "^0.1.41"
tracing-subscriber = "^0.3.20"

# common helpers
derivative = "^2.2.0"
derive_more = "^2.0.1"
getset = "^0.1.6"
lazy_static = "^1.5.0"
strum = "^0.27.2"

approx = "^0.5.1"

# serialization
base64 = "^0.22.1"
bincode = "^2.0.1"
hex = "^0.4.3"
serde = "^1.0.219"
serde_json = "^1.0.143"
serde_with = "^3.14.0"
serde-inline-default = "^1.0.0"
serde_repr = "^0.1.20"

# async
async-trait = "^0.1.89"
futures = "^0.3.31"
futures-util = "^0.3.31"
tokio = "^1.47.1"
tokio-stream = "^0.1.17"
tokio-util = "^0.7.16"

# web / networking
axum = "^0.8.4"
axum-server = "^0.7.2"
tower = "^0.5.2"
tower-http = "^0.6.6"
tokio-tungstenite = "^0.26.2"

reqwest = "^0.12.23"

# cryptography / randomness
rand = "^0.9.2"
rand_core = "^0.9.3"
rand_chacha = "^0.9.0"
rustls = "^0.23.31"

uuid = "^1.19.0"

blake3 = "^1.8.2"

curve25519-dalek = "4"
ed25519-dalek = "2"
x25519-dalek = "2"

# configuration
clap = { version = "^4.5", features = ["derive", "env"] }
config = "^0.14"
toml = "^0.8"
directories = "^6.0"

# sqlite
rusqlite = "^0.34.0"
hkdf = "^0.12.4"
sha2 = "^0.10.9"
chacha20poly1305 = "^0.10.1"

# TUI
ratatui = "^0.29"
crossterm = "^0.28"
tui-textarea = "^0.7"