[workspace]
resolver = "3"
members = [
    "crates/*",
    "apps/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
publish = false

[workspace.dependencies]
ember-contact = { path = "crates/ember-contact" }
ember-identity = { path = "crates/ember-identity" }
ember-message = { path = "crates/ember-message" }
ember-encryption = { path = "crates/ember-encryption" }
ember-transport = { path = "crates/ember-transport" }
ember-storage = { path = "crates/ember-storage" }
ember-core = { path = "crates/ember-core" }
ember-outbox = { path = "crates/ember-outbox" }
ember-node-core = { path = "crates/ember-node-core" }
ember-config = { path = "crates/ember-config" }
ember-discovery = { path = "crates/ember-discovery" }
ember-bundle = { path = "crates/ember-bundle" }

anyhow = "^1.0.99"
thiserror = "^2.0.16"
tracing = "^0.1.41"
tracing-subscriber = { version = "^0.3.20", features = ["env-filter"] }

# common helpers
derivative = "^2.2.0"
derive_more = "^2.0.1"
getset = "^0.1.6"
lazy_static = "^1.5.0"
strum = "^0.27.2"

approx = "^0.5.1"

# serialization
base64 = "^0.22.1"
postcard = { version = "^1.1", features = ["alloc"] }
hex = "^0.4.3"
humantime = "2"
serde = "^1.0.219"
serde_json = "^1.0.143"
serde_with = "^3.14.0"
serde-inline-default = "^1.0.0"
serde_repr = "^0.1.20"

# async
async-trait = "^0.1.89"
futures = "^0.3.31"
futures-util = "^0.3.31"
tokio = "^1.47.1"
tokio-stream = "^0.1.17"
tokio-util = "^0.7.16"

# web / networking
axum = "^0.8.4"
axum-server = "^0.7.2"
tower = "^0.5.2"
tower-http = "^0.6.6"
tokio-tungstenite = "^0.26.2"

reqwest = "^0.12.23"

# cryptography / randomness
rand = "^0.9.3"
rand_core = "^0.9.3"
rand_chacha = "^0.9.0"
rustls = "^0.23.31"
argon2 = "^0.5"

uuid = "^1.19.0"

blake3 = "^1.8.2"

curve25519-dalek = "4"
subtle = "^2.6"
ed25519-dalek = "2"
x25519-dalek = { version = "2", features = ["zeroize"] }

# configuration
clap = { version = "^4.5", features = ["derive", "env"] }
config = "^0.14"
toml = "^0.8"
directories = "^6.0"

# sqlite
rusqlite = { version = "^0.32.1", features = ["bundled"] }
hkdf = "^0.12.4"
sha2 = "^0.10.9"
chacha20poly1305 = "^0.10.1"

# TUI
ratatui = "^0.29"
crossterm = "^0.28"
tui-textarea = "^0.7"
ratatui-macros = "^0.6"

# Workspace-wide lint configuration
# All crates should add `[lints] workspace = true` to inherit these
[workspace.lints.rust]
# Warn on unsafe code (security-critical project)
unsafe_code = "warn"

[workspace.lints.clippy]
# ── Lint groups ──────────────────────────────────────────────
# Priority -1 lets individual overrides take precedence
all = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# ── Specific denies — no vibe-code in library crates ────────
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
wildcard_enum_match_arm = "deny"     # Force exhaustive match — compiler catches new variants
cognitive_complexity = "deny"

# ── Pedantic allows (genuinely too noisy) ────────────────────
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
similar_names = "allow"
return_self_not_must_use = "allow"  # Builder pattern methods
implicit_hasher = "allow"           # HashMap generalization rarely needed

# ── Nursery allows (false-positive-prone or subjective) ──────
significant_drop_tightening = "allow"
option_if_let_else = "allow"

# ── Other allows ─────────────────────────────────────────────
# False positive from derivative crate macro (generates internal lifetimes)
elidable_lifetime_names = "allow"
