[package]
name = "ember-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
ember-message = { path = "../crates/ember-message" }
ember-bundle = { path = "../crates/ember-bundle" }
postcard = { version = "1.1", features = ["alloc"] }

# Prevent this from interfering with workspaces
[workspace]

[[bin]]
name = "fuzz_wire_payload"
path = "fuzz_targets/fuzz_wire_payload.rs"
doc = false

[[bin]]
name = "fuzz_outer_envelope"
path = "fuzz_targets/fuzz_outer_envelope.rs"
doc = false

[[bin]]
name = "fuzz_inner_envelope"
path = "fuzz_targets/fuzz_inner_envelope.rs"
doc = false

[[bin]]
name = "fuzz_tombstone"
path = "fuzz_targets/fuzz_tombstone.rs"
doc = false

[[bin]]
name = "fuzz_bundle_reader"
path = "fuzz_targets/fuzz_bundle_reader.rs"
doc = false
