[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
reme-identity = { workspace = true }
reme-message = { workspace = true }
reme-encryption = { workspace = true }
reme-transport = { workspace = true, features = ["mqtt", "embedded"] }
reme-node-core = { workspace = true }
reme-storage = { workspace = true }
reme-outbox = { workspace = true }
reme-core = { workspace = true }
reme-config = { workspace = true, features = ["http", "mqtt"] }
reme-discovery = { workspace = true }

thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# derives
derivative = { workspace = true }

# serialization
hex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# async
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-std", "io-util"] }
tokio-util = { workspace = true }

# networking
reqwest = { workspace = true }
rand = { workspace = true }
percent-encoding = "2"

# config
clap = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }

# TUI
ratatui = { workspace = true }
crossterm = { workspace = true }
tui-textarea = { workspace = true }

# HTTP server for embedded node (LAN P2P)
axum = { workspace = true }
tower-http = { workspace = true, features = ["limit"] }
base64 = { workspace = true }

# password input
rpassword = "7"

# secure memory handling
zeroize = "1"

# crypto (for embedded node ECDH)
x25519-dalek = { workspace = true }
subtle = { workspace = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
