[package]
name = "client"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
ember-identity = { workspace = true }
ember-message = { workspace = true }
ember-encryption = { workspace = true }
ember-transport = { workspace = true, features = ["mqtt", "embedded"] }
ember-node-core = { workspace = true }
ember-storage = { workspace = true }
ember-outbox = { workspace = true }
ember-core = { workspace = true }
ember-bundle = { workspace = true }
ember-config = { workspace = true, features = ["http", "mqtt"] }
ember-discovery = { workspace = true, features = ["mdns-sd"] }

async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# derives
derivative = { workspace = true }

# serialization
hex = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# async
futures = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-std", "io-util", "sync", "time"] }
tokio-util = { workspace = true }

# networking
reqwest = { workspace = true }
rand = { workspace = true }
percent-encoding = "2"

# config
clap = { workspace = true }
humantime = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }

# TUI
ratatui = { workspace = true }
ratatui-macros = { workspace = true }
crossterm = { workspace = true, features = ["event-stream"] }
tui-textarea = { workspace = true }

# HTTP server for embedded node (LAN P2P)
axum = { workspace = true }
tower-http = { workspace = true, features = ["limit"] }
base64 = { workspace = true }

# password input
rpassword = "7"

# secure memory handling
zeroize = "1"

# crypto (for embedded node ECDH)
x25519-dalek = { workspace = true }
subtle = { workspace = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
