[package]
name = "node"
version = "0.1.0"
edition = "2021"

[lib]
name = "node"
path = "src/lib.rs"

[[bin]]
name = "node"
path = "src/main.rs"

[dependencies]
reme-message = { workspace = true }
reme-transport = { workspace = true }

# storage
rusqlite = { version = "0.32", features = ["bundled"] }
bincode = { workspace = true }

thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# serialization
base64 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# async
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "net"] }

# web
axum = { workspace = true }
reqwest = { workspace = true, features = ["json"] }

# security
subtle = "2"
zeroize = "1"

# rate limiting
tower-governor = "0.5"
governor = "0.8"

# CLI / config
clap = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
reme-identity = { workspace = true }
