[package]
name = "node"
version = "0.1.0"
edition = "2021"

[lib]
name = "node"
path = "src/lib.rs"

[[bin]]
name = "node"
path = "src/main.rs"

[dependencies]
reme-identity = { workspace = true }
reme-encryption = { workspace = true }
reme-message = { workspace = true }
reme-transport = { workspace = true, features = ["mqtt"] }
reme-node-core = { workspace = true }

# storage
rusqlite = { workspace = true }
bincode = { workspace = true }

thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# derives
derivative = { workspace = true }

# serialization
base64 = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# async
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "net"] }

# web
axum = { workspace = true }
axum-server = { workspace = true, features = ["tls-rustls"] }
http = "1"
reqwest = { workspace = true, features = ["json"] }
url = "2"

# security
subtle = "2"
zeroize = "1"
rand = { workspace = true }
x25519-dalek = { workspace = true }

# rate limiting
tower_governor = "0.8"
governor = "0.10"

# CLI / config
clap = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
reqwest = { workspace = true }
rand_core = { version = "0.6.4", features = ["getrandom"] }
