[package]
name = "ember-config"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = ["http", "mqtt"]
http = []
mqtt = []

[dependencies]
ember-identity = { workspace = true }

serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
base64 = { workspace = true }
url = "2"
percent-encoding = "2"
