[package]
name = "ember-discovery"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
mdns-sd = ["dep:mdns-sd"]
test-utils = []

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt"] }
thiserror = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
mdns-sd = { version = "0.18", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
