[package]
name = "ember-identity"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
derivative = { workspace = true }
derive_more = { workspace = true, features = ["display", "from", "deref", "deref_mut"] }
getset = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

rand_chacha = { version = "0.3.1" }
rand_core = { version = "0.6.4", features = ["getrandom"] }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
x25519-dalek = { workspace = true, features = ["static_secrets"] }
curve25519-dalek = { workspace = true }
blake3 = { workspace = true }
hkdf = "0.12"
sha2 = "0.10"
xeddsa = { version = "1.0", features = ["xed25519"] }

hex = "0.4.3"
postcard = { workspace = true }
serde = { workspace = true, features = ["derive"] }

# encrypted identity storage
argon2 = { workspace = true }
chacha20poly1305 = { workspace = true }

# secure memory handling
zeroize = "1"

tracing = { workspace = true }
