[package]
name = "ember-message"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
ember-identity = { workspace = true }

postcard = { workspace = true }
serde = { workspace = true, features = ["derive"] }
derive_more = { workspace = true, features = ["from"] }
strum = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["v4"] }

# Tombstone crypto
blake3 = { workspace = true }
chacha20poly1305 = { workspace = true }
rand = { workspace = true }
rand_core = { version = "0.6.4", features = ["getrandom"] }  # For xeddsa compatibility
subtle = { workspace = true }  # For constant-time comparison
x25519-dalek = { workspace = true }
xeddsa = { version = "1.0", features = ["xed25519"] }
