[package]
name = "ember-node-core"
version.workspace = true
edition.workspace = true
description = "Core node functionality for embedded and standalone mailbox nodes"
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
# Internal crates
ember-message = { workspace = true }

# Derives
derivative = { workspace = true }

# Storage
rusqlite = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true, features = ["derive"] }

# Async (for embedded node channels)
tokio = { workspace = true, features = ["sync"] }

# Error handling & logging
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
# Required for async tests
tokio = { workspace = true, features = ["sync", "rt", "macros"] }
ember-identity = { workspace = true }
