[package]
name = "ember-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
ember-contact = { workspace = true }
ember-identity = { workspace = true }
ember-message = { workspace = true }
ember-outbox = { workspace = true }
ember-node-core = { workspace = true }

rusqlite = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = "3.27"
