[package]
name = "reme-config"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[features]
default = ["http", "mqtt"]
http = []
mqtt = []

[dependencies]
reme-identity = { workspace = true }

serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
base64 = { workspace = true }
url = "2"
percent-encoding = "2"
