[package]
name = "reme-core"
version = "0.1.0"
edition = "2021"

[dependencies]
reme-identity = { workspace = true }
reme-message = { workspace = true }
reme-encryption = { workspace = true }
reme-transport = { workspace = true }
reme-storage = { workspace = true }

thiserror = { workspace = true }
tracing = { workspace = true }

async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
hex = { workspace = true }
node = { path = "../../apps/node" }
axum = { workspace = true }
