[package]
name = "reme-core"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
reme-identity = { workspace = true }
reme-message = { workspace = true }
reme-encryption = { workspace = true }
reme-transport = { workspace = true }
reme-storage = { workspace = true }
reme-outbox = { workspace = true }

thiserror = { workspace = true }
tracing = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true, features = ["derive"] }

async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
hex = { workspace = true }
node = { path = "../../apps/node" }
axum = { workspace = true }
reme-config = { workspace = true }
reme-bundle = { workspace = true }
reme-node-core = { workspace = true }
