[package]
name = "reme-discovery"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[features]
mdns-sd = ["dep:mdns-sd", "dep:hostname"]
test-utils = []

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
thiserror = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
hostname = { version = "0.4", optional = true }
mdns-sd = { version = "0.18", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
