[package]
name = "reme-encryption"
version = "0.1.0"
edition = "2021"

[dependencies]
reme-message = { workspace = true }
reme-identity = { workspace = true }
thiserror = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
uuid = { workspace = true }
x25519-dalek = { workspace = true, features = ["static_secrets"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }

chacha20poly1305 = "0.10"
