[package]
name = "reme-message"
version = "0.1.0"
edition = "2021"

[dependencies]
reme-identity = { workspace = true }

bincode = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

# Tombstone crypto
blake3 = { workspace = true }
chacha20poly1305 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
x25519-dalek = { workspace = true }