[package]
name = "reme-message"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
reme-identity = { workspace = true }

bincode = { workspace = true }
derive_more = { workspace = true, features = ["from"] }
strum = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["v4"] }

# Tombstone crypto
blake3 = { workspace = true }
chacha20poly1305 = { workspace = true }
rand = { workspace = true }
rand_core = { version = "0.6.4", features = ["getrandom"] }  # For xeddsa compatibility
subtle = { workspace = true }  # For constant-time comparison
x25519-dalek = { workspace = true }
xeddsa = { version = "1.0", features = ["xed25519"] }