[package]
name = "reme-node-core"
version = "0.1.0"
edition = "2021"
description = "Core node functionality for embedded and standalone mailbox nodes"

[dependencies]
# Internal crates
reme-message = { workspace = true }

# Derives
derivative = { workspace = true }

# Storage
rusqlite = { workspace = true }
bincode = { workspace = true }

# Async (for embedded node channels)
tokio = { workspace = true, features = ["sync"] }

# Error handling & logging
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
# Required for async tests
tokio = { workspace = true, features = ["sync", "rt", "macros"] }
reme-identity = { workspace = true }
