[package]
name = "reme-prekeys"
version = "0.1.0"
edition = "2024"

[dependencies]
reme-identity = { workspace = true }

bincode = { workspace = true }

rand_core = { version = "0.6.4", features = ["getrandom"] }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
x25519-dalek = { workspace = true }
blake3 = { workspace = true }
uuid = { workspace = true, features = ["v4"] }