[package]
name = "reme-prekeys"
version = "0.1.0"
edition = "2021"

[dependencies]
reme-identity = { workspace = true }

bincode = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }

rand_core = { version = "0.6.4", features = ["getrandom"] }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
x25519-dalek = { workspace = true, features = ["static_secrets", "serde"] }
blake3 = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }