[package]
name = "reme-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
reme-identity = { workspace = true }
reme-message = { workspace = true }
reme-outbox = { workspace = true }
reme-node-core = { workspace = true }

rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = "3.13"
tokio = { workspace = true, features = ["rt", "macros"] }
