[package]
name = "reme-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
reme-identity = { workspace = true }
reme-message = { workspace = true }
reme-outbox = { workspace = true }

rusqlite = { workspace = true }
thiserror = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.13"
