[package]
name = "reme-transport"
version = "0.1.0"
edition = "2021"

[dependencies]
reme-message = { workspace = true }
reme-node-core = { workspace = true, optional = true }

thiserror = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true, features = ["derive"] }
base64 = "0.22"
tracing = { workspace = true }
url = "2"
percent-encoding = "2"

# HTTP implementation
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
futures = { workspace = true }

# MQTT implementation
rumqttc = { version = "0.24", features = ["use-rustls"], optional = true }
hex = { version = "0.4", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }

# TLS + Certificate Pinning
rustls = { workspace = true, features = ["ring"] }
sha2 = { workspace = true }
webpki-roots = "1"
x509-parser = "0.17"

# Optional: for server implementation
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }

[features]
default = ["http-client"]
http-client = []
http-server = ["axum", "tower"]
mqtt = ["rumqttc", "hex", "uuid"]
embedded = ["reme-node-core"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
